--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,4 @@
-/* Base Styles */
+/* Base Styles yay */
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f9f9f9; /* Light grey background for contrast */
