--- a/mystyle.css
+++ b/mystyle.css
@@ -18,7 +18,7 @@ body {
 
 /* Header */
 header {
-    background-color: #2e7d32; /* Dark green header background */
+    background-color: #154374; /* Dark green header background */
     color: #fff; /* White text */
     padding: 20px 0;
     text-align: center;
