--- a/mystyle.css
+++ b/mystyle.css
@@ -29,19 +29,22 @@ header h1 {
     margin: 0;
     font-size: 2.5em;
     font-weight: bold;
+    font-family: "Garamond", Times, serif;
 }
 
 /* Main Content */
 h2 {
-    color: #2e7d32; /* Dark green color for subheadings */
+    color: #243825; /* Dark green color for subheadings */
     border-bottom: 2px solid #243825; /* Underline with the same dark green color */
     padding-bottom: 10px;
     margin-bottom: 20px;
+    font-family: "Garamond", Times, serif;
 }
 
 p {
     margin-bottom: 20px;
     font-size: 1.1em; /* Slightly larger text for readability */
+    font-family: "Garamond", Times, serif;
 }
 
 /* Video Container */
