--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 
 /* Header */
 header {
-    background-color:#243825; /* Dark green header background */
+    background-color:#394f3d; /* Dark green header background */
     color: #fff; /* White text */
     padding: 10px 0;
     text-align: center;
