--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 
 /* Header */
 header {
-    background-color:#394f3d; /* Dark green header background */
+    background-color:#fff; /* Dark green header background */
     color: #fff; /* White text */
     padding: 10px 0;
     text-align: center;
@@ -41,8 +41,7 @@ h2 {
 
 header h3 {
     color: #dee3df;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
+    margin: 0;
 }
 
 p {
